1.8.1 => 1.8.2
=================
New features:
    You can change the organization(s) a patient belongs to (and move his/her tracks)
    Correct token button added to menu
    (Re)import imported files
Interface improvements:
    When a token is corrected links are visible when seeing the token to open the original / copy
    Improved interface for communication templates and automatic mail
    The Contact => Bugs and GemsTracker pages have been refreshed with a default bugs url (use Roles to make invisible)
    Editing staff and organizations uses defaults for smoother creation
Rights:
    The types of staff that a user can create/edit are determined at the group level
    A default can be set at group level for new users
    Roles only determine what menu items are allowed, you no longer need to have a right to assign it to another staff
    Respondent (search) screen now changeable by group
    Private data can now be hidden or (partially) masked for groups, e.g. researchers need not see patient names
    Added "site administrator" role and group between local admin and super admin
    Administrators may now have the right to switch the used group to any they may set
Security:
    The full Gems version number is only displayed after login
    All recalculate, check, synchronize, patch and run commands are set to logged
    New security headers and meta tags can be set from the project.ini
Programmability:
    Before field save events allows changing the fields after their new values have been calculated
    Respondent changed events can be set at the organization level
    It is easier to change part of the display in ShowTrackTokenSnippet
Testing:
    On acceptance and demonstration mail only respondent mails are bounce, staff mails are sent to receiver
    Administrators may now have the right to switch the used group to any they may set

Important changes from 1.8.0 => 1.8.1
============================================================