@@ -353,6 +353,8 @@ class Gems_Pdf extends \Gems_Registry_TargetAbstract
      */
     public function convertFromHtml($content)
     {
+        \MUtil_File::ensureDir(GEMS_ROOT_DIR . '/var/tmp');
+
         $tempInputFilename  = GEMS_ROOT_DIR . '/var/tmp/export-' . md5(time() . rand()) . '.html';
         $tempOutputFilename = GEMS_ROOT_DIR . '/var/tmp/export-' . md5(time() . rand()) . '.pdf';
 
