@@ -3,6 +3,7 @@
 New features:
     You can change the organization(s) a patient belongs to (and move his/her tracks)
     Correct token button added to menu
+    Memo field type for tracks
     (Re)import imported files
 Interface improvements:
     When a token is corrected links are visible when seeing the token to open the original / copy
@@ -19,12 +20,16 @@ Rights:
     Administrators may now have the right to switch the used group to any they may set
 Security:
     The full Gems version number is only displayed after login
-    All recalculate, check, synchronize, patch and run commands are set to logged
+    All recalculate, check, synchronize, patch and run commands log the item they are started for
     New security headers and meta tags can be set from the project.ini
 Programmability:
     Before field save events allows changing the fields after their new values have been calculated
     Respondent changed events can be set at the organization level
     It is easier to change part of the display in ShowTrackTokenSnippet
+Bugs
+    Blocked users were not blocked
+    The APC Cache was cleared incorrectly
+    The var/tmp directory is created when needed and it does not exist
 Testing:
     On acceptance and demonstration mail only respondent mails are bounce, staff mails are sent to receiver
     Administrators may now have the right to switch the used group to any they may set
